# raytracer

./: CMakeLists.txt  raytrace.c
include/: camera.h  graphics.h  vec_maths.h
src/: graphics.c  vec_maths.c
